--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.32.0",
     "@pnpm/meta-updater": "^2.0.6",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.2.0",
     "esbuild": "^0.25.8",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
@@ -43,10 +43,10 @@
     "eslint-plugin-mocha": "^11.1.0",
     "eslint-plugin-unicorn": "^60.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "~3.3.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "syncpack": "^13.0.4",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.38.0"
   },
   "pnpm": {
