--- a/data/fixtures/recorded/modifiers/interior/changeHead.yml
+++ b/data/fixtures/recorded/modifiers/interior/changeHead.yml
@@ -10,13 +10,13 @@ command:
         - {type: extendThroughStartOf}
   usePrePhraseSnapshot: false
 initialState:
-  documentContents: <div>a b c</div>
+  documentContents: <div>abcd</div>
   selections:
-    - anchor: {line: 0, character: 8}
-      active: {line: 0, character: 8}
+    - anchor: {line: 0, character: 7}
+      active: {line: 0, character: 7}
   marks: {}
 finalState:
-  documentContents: <div> c</div>
+  documentContents: <div>cd</div>
   selections:
     - anchor: {line: 0, character: 5}
       active: {line: 0, character: 5}
