--- a/packages/neovim-common/package.json
+++ b/packages/neovim-common/package.json
@@ -27,11 +27,11 @@
     "@cursorless/node-common": "workspace:*",
     "lodash": "^4.17.21",
     "neovim": "^5.4.0",
+    "uuid": "^13.0.0",
     "vscode-uri": "^3.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
-    "@types/uuid": "^10.0.0",
-    "@types/vscode": "1.82.0"
+    "@types/vscode": "1.95.0"
   }
 }
