--- a/data/fixtures/recorded/surroundingPair/parseTree/python/clearMatching10.yml
+++ b/data/fixtures/recorded/surroundingPair/parseTree/python/clearMatching10.yml
@@ -14,13 +14,13 @@ initialState:
 
     "'jlkjl' 'fsd'"
   selections:
-    - anchor: {line: 1, character: 8}
-      active: {line: 1, character: 8}
+    - anchor: {line: 1, character: 7}
+      active: {line: 1, character: 7}
   marks: {}
 finalState:
   documentContents: |-
 
-    ""
+    "'' 'fsd'"
   selections:
-    - anchor: {line: 1, character: 1}
-      active: {line: 1, character: 1}
+    - anchor: {line: 1, character: 2}
+      active: {line: 1, character: 2}
