--- a/data/fixtures/recorded/selectionTypes/changeEveryPaintInside.yml
+++ b/data/fixtures/recorded/selectionTypes/changeEveryPaintInside.yml
@@ -1,7 +1,7 @@
 languageId: plaintext
 command:
   version: 6
-  spokenForm: change every paint inside paren
+  spokenForm: change every paint inside
   action:
     name: clearAndSetSelection
     target:
@@ -10,17 +10,12 @@ command:
         - type: everyScope
           scopeType: {type: nonWhitespaceSequence}
         - {type: interiorOnly}
-      mark: {type: decoratedSymbol, symbolColor: default, character: (}
   usePrePhraseSnapshot: true
 initialState:
   documentContents: foo(aa|aa-().c_d bb|bb-().'') { return 1; }
   selections:
-    - anchor: {line: 0, character: 0}
-      active: {line: 0, character: 0}
-  marks:
-    default.(:
-      start: {line: 0, character: 3}
-      end: {line: 0, character: 4}
+    - anchor: {line: 0, character: 4}
+      active: {line: 0, character: 4}
 finalState:
   documentContents: "  { return 1; }"
   selections:
