--- a/data/fixtures/recorded/selectionTypes/changeEveryShortPaintInside.yml
+++ b/data/fixtures/recorded/selectionTypes/changeEveryShortPaintInside.yml
@@ -1,7 +1,7 @@
 languageId: plaintext
 command:
   version: 6
-  spokenForm: change every short paint inside paren
+  spokenForm: change every short paint inside
   action:
     name: clearAndSetSelection
     target:
@@ -10,17 +10,12 @@ command:
         - type: everyScope
           scopeType: {type: boundedNonWhitespaceSequence}
         - {type: interiorOnly}
-      mark: {type: decoratedSymbol, symbolColor: default, character: (}
   usePrePhraseSnapshot: true
 initialState:
   documentContents: foo(aa|aa-().c_d bb|bb-().'')
   selections:
-    - anchor: {line: 0, character: 1}
-      active: {line: 0, character: 1}
-  marks:
-    default.(:
-      start: {line: 0, character: 3}
-      end: {line: 0, character: 4}
+    - anchor: {line: 0, character: 4}
+      active: {line: 0, character: 4}
 finalState:
   documentContents: foo( )
   selections:
