--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "compile": "tsc --build && pnpm -r --if-present compile:esbuild",
     "fix:eslint": "pnpm lint:ts --fix",
     "fix:meta": "pnpm run meta-updater:base && pnpm -r exec prettier --write tsconfig.json package.json",
+    "fix:prettier": "prettier --write --list-different .",
     "fix:syncpack": "pnpm syncpack fix-mismatches",
     "init-vscode-sandbox": "pnpm --filter=@cursorless/cursorless-vscode init-launch-sandbox",
     "lint:meta": "pnpm run meta-updater:base --test",
     "lint:ts": "eslint packages --ext ts,tsx,mts",
+    "lint:prettier": "prettier --check .",
     "lint": "pnpm run lint:meta && syncpack list-mismatches && pnpm run lint:ts",
     "meta-updater:base": "pnpm --filter=@cursorless/meta-updater build && meta-updater",
     "preinstall": "npx only-allow pnpm",
