--- a/data/fixtures/recorded/relativeScopes/changeNextPair.yml
+++ b/data/fixtures/recorded/relativeScopes/changeNextPair.yml
@@ -1,26 +1,33 @@
-languageId: ruby
+languageId: plaintext
 command:
-  version: 6
-  spokenForm: change next call
+  version: 7
+  spokenForm: change next pair
   action:
     name: clearAndSetSelection
     target:
       type: primitive
       modifiers:
         - type: relativeScope
-          scopeType: {type: functionCall}
+          scopeType: {type: surroundingPair, delimiter: any}
           offset: 1
           length: 1
           direction: forward
-  usePrePhraseSnapshot: true
+  usePrePhraseSnapshot: false
 initialState:
-  documentContents: aaa(bbb(), ccc()) + ddd()
+  documentContents: |-
+    (
+        ()
+    )
+    ()
   selections:
     - anchor: {line: 0, character: 0}
       active: {line: 0, character: 0}
   marks: {}
 finalState:
-  documentContents: "aaa(bbb(), ccc()) + "
+  documentContents: |
+    (
+        ()
+    )
   selections:
-    - anchor: {line: 0, character: 20}
-      active: {line: 0, character: 20}
+    - anchor: {line: 3, character: 0}
+      active: {line: 3, character: 0}
