--- a/data/fixtures/recorded/surroundingPair/changeNextRound4.yml
+++ b/data/fixtures/recorded/surroundingPair/changeNextRound4.yml
@@ -20,7 +20,7 @@ initialState:
       active: {line: 0, character: 0}
   marks: {}
 finalState:
-  documentContents: () ()
+  documentContents: "(()) "
   selections:
-    - anchor: {line: 0, character: 1}
-      active: {line: 0, character: 1}
+    - anchor: {line: 0, character: 5}
+      active: {line: 0, character: 5}
