--- a/data/fixtures/recorded/relativeScopes/changeNextPair.yml
+++ b/data/fixtures/recorded/relativeScopes/changeNextPair.yml
@@ -1,26 +1,33 @@
 languageId: plaintext
 command:
   version: 7
-  spokenForm: change next round
+  spokenForm: change next pair
   action:
     name: clearAndSetSelection
     target:
       type: primitive
       modifiers:
         - type: relativeScope
-          scopeType: {type: surroundingPair, delimiter: parentheses}
+          scopeType: {type: surroundingPair, delimiter: any}
           offset: 1
           length: 1
           direction: forward
-  usePrePhraseSnapshot: true
+  usePrePhraseSnapshot: false
 initialState:
-  documentContents: (()) ()
+  documentContents: |-
+    (
+        ()
+    )
+    ()
   selections:
     - anchor: {line: 0, character: 0}
       active: {line: 0, character: 0}
   marks: {}
 finalState:
-  documentContents: "(()) "
+  documentContents: |
+    (
+        ()
+    )
   selections:
-    - anchor: {line: 0, character: 5}
-      active: {line: 0, character: 5}
+    - anchor: {line: 3, character: 0}
+      active: {line: 3, character: 0}
