--- a/data/fixtures/recorded/relativeScopes/changeNextState.yml
+++ b/data/fixtures/recorded/relativeScopes/changeNextState.yml
@@ -1,26 +1,33 @@
-languageId: plaintext
+languageId: typescript
 command:
   version: 7
-  spokenForm: change next round
+  spokenForm: change next state
   action:
     name: clearAndSetSelection
     target:
       type: primitive
       modifiers:
         - type: relativeScope
-          scopeType: {type: surroundingPair, delimiter: parentheses}
+          scopeType: {type: statement}
           offset: 1
           length: 1
           direction: forward
-  usePrePhraseSnapshot: true
+  usePrePhraseSnapshot: false
 initialState:
-  documentContents: (()) ()
+  documentContents: |-
+    if (true) {
+       const a = 1;
+    }
+    const b = 2;
   selections:
     - anchor: {line: 0, character: 0}
       active: {line: 0, character: 0}
   marks: {}
 finalState:
-  documentContents: "(()) "
+  documentContents: |
+    if (true) {
+       const a = 1;
+    }
   selections:
-    - anchor: {line: 0, character: 5}
-      active: {line: 0, character: 5}
+    - anchor: {line: 3, character: 0}
+      active: {line: 3, character: 0}
