--- a/data/fixtures/recorded/actions/incrementDecrement/incrementFile.yml
+++ b/data/fixtures/recorded/actions/incrementDecrement/incrementFile.yml
@@ -1,6 +1,6 @@
 languageId: plaintext
 command:
-  version: 7
+  version: 6
   spokenForm: increment file
   action:
     name: increment
@@ -12,100 +12,68 @@ command:
   usePrePhraseSnapshot: true
 initialState:
   documentContents: |-
-    3.0
-    10.0
-    0.0
+    foo
 
-    007
-    001
-    000
-    0007
+    0
+    1
+    0.5
+    1.5
 
-    99
-    009
+    -0
+    -1
+    -0.5
+    -1.5
 
-    00100
-    010
+    0rem
+    1rem
+    0.5rem
+    1.5rem
 
-    004.60
-    001.5
-    99.99
-
-    003.0
-    99.0
-    000.1
-
-    -007
-    -001
-    -003.0
-    -99
-
-    000.5
-    000.1
-
-    001.234
-    003.00
-    007.999
+    -0rem
+    -1rem
+    -0.5rem
+    -1.5rem
   selections:
-    - anchor: {line: 18, character: 0}
-      active: {line: 18, character: 0}
+    - anchor: {line: 0, character: 0}
+      active: {line: 0, character: 0}
   marks: {}
 finalState:
   documentContents: |-
-    4.0
-    11.0
-    0.1
+    foo
 
-    008
-    002
-    001
-    0008
+    1
+    2
+    0.6
+    2.5
 
-    100
-    010
+    1
+    0
+    -0.4
+    -0.5
 
-    00101
-    011
+    1rem
+    2rem
+    0.6rem
+    2.5rem
 
-    005.60
-    002.5
-    100.99
-
-    004.0
-    100.0
-    000.2
-
-    -006
-    000
-    -002.0
-    -98
-
-    000.6
-    000.2
-
-    002.234
-    004.00
-    008.999
+    1rem
+    0rem
+    -0.4rem
+    -0.5rem
   selections:
-    - anchor: {line: 18, character: 0}
-      active: {line: 18, character: 0}
+    - anchor: {line: 0, character: 0}
+      active: {line: 0, character: 0}
   thatMark:
     - type: UntypedTarget
       contentRange:
-        start: {line: 0, character: 0}
-        end: {line: 0, character: 3}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 1, character: 0}
-        end: {line: 1, character: 4}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
         start: {line: 2, character: 0}
-        end: {line: 2, character: 3}
+        end: {line: 2, character: 1}
+      isReversed: false
+      hasExplicitRange: true
+    - type: UntypedTarget
+      contentRange:
+        start: {line: 3, character: 0}
+        end: {line: 3, character: 1}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
@@ -122,127 +90,73 @@ finalState:
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
-        start: {line: 6, character: 0}
-        end: {line: 6, character: 3}
+        start: {line: 7, character: 0}
+        end: {line: 7, character: 1}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
-        start: {line: 7, character: 0}
-        end: {line: 7, character: 4}
+        start: {line: 8, character: 0}
+        end: {line: 8, character: 1}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 9, character: 0}
-        end: {line: 9, character: 3}
+        end: {line: 9, character: 4}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 10, character: 0}
-        end: {line: 10, character: 3}
+        end: {line: 10, character: 4}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 12, character: 0}
-        end: {line: 12, character: 5}
+        end: {line: 12, character: 1}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 13, character: 0}
-        end: {line: 13, character: 3}
+        end: {line: 13, character: 1}
+      isReversed: false
+      hasExplicitRange: true
+    - type: UntypedTarget
+      contentRange:
+        start: {line: 14, character: 0}
+        end: {line: 14, character: 3}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 15, character: 0}
-        end: {line: 15, character: 6}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 16, character: 0}
-        end: {line: 16, character: 5}
+        end: {line: 15, character: 3}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 17, character: 0}
-        end: {line: 17, character: 6}
+        end: {line: 17, character: 1}
+      isReversed: false
+      hasExplicitRange: true
+    - type: UntypedTarget
+      contentRange:
+        start: {line: 18, character: 0}
+        end: {line: 18, character: 1}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 19, character: 0}
-        end: {line: 19, character: 5}
+        end: {line: 19, character: 4}
       isReversed: false
       hasExplicitRange: true
     - type: UntypedTarget
       contentRange:
         start: {line: 20, character: 0}
-        end: {line: 20, character: 5}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 21, character: 0}
-        end: {line: 21, character: 5}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 23, character: 0}
-        end: {line: 23, character: 4}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 24, character: 0}
-        end: {line: 24, character: 3}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 25, character: 0}
-        end: {line: 25, character: 6}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 26, character: 0}
-        end: {line: 26, character: 3}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 28, character: 0}
-        end: {line: 28, character: 5}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 29, character: 0}
-        end: {line: 29, character: 5}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 31, character: 0}
-        end: {line: 31, character: 7}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 32, character: 0}
-        end: {line: 32, character: 6}
-      isReversed: false
-      hasExplicitRange: true
-    - type: UntypedTarget
-      contentRange:
-        start: {line: 33, character: 0}
-        end: {line: 33, character: 7}
+        end: {line: 20, character: 4}
       isReversed: false
       hasExplicitRange: true
