--- a/data/fixtures/recorded/actions/incrementDecrement/decrementFile3.yml
+++ b/data/fixtures/recorded/actions/incrementDecrement/decrementFile3.yml
@@ -15,6 +15,7 @@ initialState:
     10_000
     10_000.0
     10_000.0_10
+    010_000.0
     0_0.0_1
   selections:
     - anchor: {line: 0, character: 0}
@@ -22,9 +23,10 @@ initialState:
   marks: {}
 finalState:
   documentContents: |-
-    99_99
-    99_99.0
-    99_99.01_0
+    9_999
+    9_999.0
+    9_999.0_10
+    009_999.0
     -0_0.0_9
   selections:
     - anchor: {line: 0, character: 0}
@@ -51,6 +53,12 @@ finalState:
     - type: UntypedTarget
       contentRange:
         start: {line: 3, character: 0}
-        end: {line: 3, character: 8}
+        end: {line: 3, character: 9}
+      isReversed: false
+      hasExplicitRange: true
+    - type: UntypedTarget
+      contentRange:
+        start: {line: 4, character: 0}
+        end: {line: 4, character: 8}
       isReversed: false
       hasExplicitRange: true
