--- a/data/fixtures/recorded/actions/incrementDecrement/incrementFile3.yml
+++ b/data/fixtures/recorded/actions/incrementDecrement/incrementFile3.yml
@@ -15,6 +15,7 @@ initialState:
     10_000
     10_000.0
     10_000.0_10
+    010_000.0
     0_0.0_1
   selections:
     - anchor: {line: 0, character: 0}
@@ -25,6 +26,7 @@ finalState:
     10_001
     10_001.0
     10_001.0_10
+    010_001.0
     0_0.1_1
   selections:
     - anchor: {line: 0, character: 0}
@@ -51,6 +53,12 @@ finalState:
     - type: UntypedTarget
       contentRange:
         start: {line: 3, character: 0}
-        end: {line: 3, character: 7}
+        end: {line: 3, character: 9}
+      isReversed: false
+      hasExplicitRange: true
+    - type: UntypedTarget
+      contentRange:
+        start: {line: 4, character: 0}
+        end: {line: 4, character: 7}
       isReversed: false
       hasExplicitRange: true
